@@ -7,6 +7,13 @@
                                   Changelog
 
 
+
+Daniel Stenberg (26 Nov 2009)
+ - Extended and fixed the change I did on Dec 11 for the the progress
+   meter/callback during FTP command/response sequences. It turned out it was
+   really lame before and now the progress meter SHOULD get called at least
+   once per second.
+
 Daniel Stenberg (23 Nov 2009)
 - Bjorn Augustsson reported a bug which made curl not report any problems even
   though it failed to write a very small download to disk (done in a single
